--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 11:05:24 2018</p>
+         Last Run: Tue Jul 10 12:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>9</td>
-                        <td>54</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>NW</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>17</td>
+                        <td>10</td>
                         <td>56</td>
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
-                        <td>64</td>
+                        <td>18</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "17",
-                 "24"
+                 "8",
+                 "10",
+                 "18"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "56",
-                 "64"
+                 "63"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "48",
-                 "45"
+                 "58",
+                 "49",
+                 "47"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 11:05:24 2018</p>
+         Last Run: Tue Jul 10 12:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>4</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>15</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>15</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -269,10 +269,10 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
+                        <td>1</td>
+                        <td>36</td>
                         <td>0</td>
-                        <td>35</td>
-                        <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>5</td>
                      </tr>
@@ -282,7 +282,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
@@ -405,7 +405,7 @@
                  "0",
                  "0",
                  "0",
-                 "0",
+                 "1",
                  "1"
                ]
              },
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "29",
                  "31",
-                 "35",
-                 "43"
+                 "30",
+                 "31",
+                 "36",
+                 "44"
                ]
              },
              {
@@ -426,8 +426,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "15",
+                 "27",
+                 "26",
                  "11",
                  "5",
                  "1"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 11:05:24 2018</p>
+         Last Run: Tue Jul 10 12:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,63 +468,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>24</td>
-                        <td>82</td>
+                        <td>63</td>
+                        <td>81</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>24</td>
+                        <td>61</td>
                         <td>74</td>
                         <td>2</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>11</td>
+                        <td>38</td>
                         <td>64</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>19</td>
                         <td>NNW</td>
-                        <td>87</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>10</td>
-                        <td>59</td>
-                        <td>6</td>
+                        <td>24</td>
+                        <td>61</td>
+                        <td>3</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>56</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>9</td>
-                        <td>56</td>
-                        <td>6</td>
-                        <td>18</td>
+                        <td>Overcast</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>21</td>
+                        <td>60</td>
+                        <td>3</td>
+                        <td>19</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "12",
                  "13",
                  "14",
-                 "15"
+                 "14"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "12",
                  "13",
                  "14",
-                 "15"
+                 "14"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "63",
+                 "61",
+                 "38",
                  "24",
-                 "24",
-                 "11",
-                 "10",
-                 "9"
+                 "21"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "74",
                  "64",
-                 "59",
-                 "56"
+                 "61",
+                 "60"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "96",
                  "95",
-                 "94",
-                 "87",
-                 "56",
-                 "58"
+                 "93",
+                 "92",
+                 "94"
                ]
              }
            ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 11:05:24 2018</p>
+         Last Run: Tue Jul 10 12:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>3</td>
                         <td>18</td>
                         <td>SSW</td>
@@ -746,7 +746,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>6</td>
                         <td>18</td>
                         <td>S</td>
@@ -891,9 +891,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "57",
-                 "49",
+                 "50",
                  "44",
-                 "38",
+                 "39",
                  "36"
                ]
              },
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 11:05:24 2018</p>
+         Last Run: Tue Jul 10 12:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -945,8 +945,8 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
                         <td>26</td>
                         <td>2</td>
@@ -964,7 +964,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -1020,7 +1020,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
                  "24"
                ]
@@ -1031,7 +1031,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
                  "24"
                ]
@@ -1105,7 +1105,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "24",
-                 "23",
+                 "22",
                  "18"
                ]
              }
