--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 12:05:10 2018</p>
+         Last Run: Tue Jul 10 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,22 +30,22 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>8</td>
-                        <td>55</td>
+                        <td>Mostly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>24</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>56</td>
                         <td>0</td>
                         <td>19</td>
@@ -57,7 +57,7 @@
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>18</td>
+                        <td>17</td>
                         <td>63</td>
                         <td>0</td>
                         <td>18</td>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
+                 "19",
                  "19",
                  "17"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
+                 "19",
                  "19",
                  "17"
                ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "10",
-                 "18"
+                 "24",
+                 "9",
+                 "17"
                ]
              },
              {
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "57",
                  "56",
                  "63"
                ]
@@ -190,7 +190,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
+                 "68",
                  "49",
                  "47"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 12:05:10 2018</p>
+         Last Run: Tue Jul 10 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>26</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -427,7 +427,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "27",
-                 "26",
+                 "24",
                  "11",
                  "5",
                  "1"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 12:05:10 2018</p>
+         Last Run: Tue Jul 10 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -522,7 +522,7 @@
                         <td>21</td>
                         <td>60</td>
                         <td>3</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NNW</td>
                         <td>94</td>
                      </tr>
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 12:05:10 2018</p>
+         Last Run: Tue Jul 10 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -709,24 +709,24 @@
                         <td>Clear</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>56</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>SSW</td>
-                        <td>12</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>47</td>
                         <td>3</td>
-                        <td>18</td>
-                        <td>SSW</td>
-                        <td>11</td>
+                        <td>13</td>
+                        <td>SW</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -734,34 +734,34 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>40</td>
                         <td>4</td>
-                        <td>18</td>
-                        <td>S</td>
-                        <td>9</td>
+                        <td>11</td>
+                        <td>SSW</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>34</td>
                         <td>6</td>
-                        <td>18</td>
-                        <td>S</td>
-                        <td>9</td>
+                        <td>11</td>
+                        <td>SSW</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>32</td>
                         <td>7</td>
-                        <td>14</td>
-                        <td>SSE</td>
+                        <td>11</td>
+                        <td>S</td>
                         <td>9</td>
                      </tr>
                   </tbody>
@@ -809,10 +809,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "14",
-                 "16",
+                 "17",
                  "18",
-                 "19",
-                 "20"
+                 "20",
+                 "21"
                ]
              },
              {
@@ -822,10 +822,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "14",
-                 "16",
+                 "17",
                  "18",
-                 "19",
-                 "20"
+                 "20",
+                 "21"
                ]
              }
            ]
@@ -878,7 +878,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "0",
                  "0",
@@ -890,11 +890,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "50",
-                 "44",
-                 "39",
-                 "36"
+                 "56",
+                 "47",
+                 "40",
+                 "34",
+                 "32"
                ]
              },
              {
@@ -902,10 +902,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "11",
-                 "9",
-                 "9",
+                 "10",
+                 "10",
+                 "8",
+                 "8",
                  "9"
                ]
              }
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 12:05:10 2018</p>
+         Last Run: Tue Jul 10 13:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -948,11 +948,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -964,7 +964,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -1094,7 +1094,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "26",
+                 "27",
                  "30",
                  "35"
                ]
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "22",
+                 "25",
+                 "23",
                  "18"
                ]
              }
