--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 13:05:26 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
+         Last Run: Tue Jul 10 14:05:16 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
                   <thead>
@@ -34,35 +34,35 @@
                         <td>19</td>
                         <td>19</td>
                         <td>24</td>
-                        <td>57</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>68</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>9</td>
-                        <td>56</td>
-                        <td>0</td>
-                        <td>19</td>
-                        <td>NW</td>
-                        <td>49</td>
-                     </tr>
-                     <tr>
-                        <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>Mostly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>24</td>
                         <td>63</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>NNW</td>
-                        <td>47</td>
+                        <td>NW</td>
+                        <td>64</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>24</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>19</td>
+                        <td>NW</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "19",
-                 "19",
+                 "18",
                  "17"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "19",
-                 "19",
+                 "18",
                  "17"
                ]
              }
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "9",
-                 "17"
+                 "24",
+                 "24"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "56",
-                 "63"
+                 "61",
+                 "63",
+                 "67"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "49",
-                 "47"
+                 "74",
+                 "64",
+                 "63"
                ]
              }
            ]
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 13:05:26 2018</p>
+         Last Run: Tue Jul 10 14:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -447,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 13:05:26 2018</p>
+         Last Run: Tue Jul 10 14:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 13:05:26 2018</p>
+         Last Run: Tue Jul 10 14:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -714,7 +715,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -722,7 +723,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SW</td>
@@ -736,7 +737,7 @@
                         <td>0</td>
                         <td>40</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSW</td>
                         <td>8</td>
                      </tr>
@@ -891,7 +892,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "47",
+                 "46",
                  "40",
                  "34",
                  "32"
@@ -902,7 +903,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
+                 "11",
                  "10",
                  "8",
                  "8",
@@ -923,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 13:05:26 2018</p>
+         Last Run: Tue Jul 10 14:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -976,7 +977,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -1106,7 +1107,7 @@
                "data":[
                  "25",
                  "23",
-                 "18"
+                 "19"
                ]
              }
            ]
